@@ -53,6 +53,7 @@ CONFIG_SOCKET=y
 CONFIG_UNIX=n
 CONFIG_NANO=y
 CONFIG_INET=n
+CONFIG_INET_STATUS=n
 CONFIG_SOCK_CLIENTONLY=n
 CONFIG_SOCK_STREAMONLY=y
 
